src/sass/_selectable_main_table.scss
.select-header {
  padding-bottom: 0;
  padding-top: 4px;

  .multiselect-checkbox {
    display: inline-block;
  }

  &.no-menu {
    padding-top: 0.75rem;
  }
}

// fix for safari https://warthogs.atlassian.net/browse/WD-7486
.multiselect-checkbox span.p-checkbox__label {
  padding-left: 0;

  // applying the above style breaks the checkbox in firefox
  @-moz-document url-prefix() {
    padding-left: 2rem;
  }
}

.selected-row {
  background-color: #e6f2ff;
}

.select {
  padding-right: 0;
  width: 70px;

  button {
    margin-left: -15px;
  }

  label {
    padding-top: 0.2rem !important;
  }
}

.disabled-row {
  opacity: 0.5;

  .actions > * {
    display: none;
  }
}

